# mina-state-proof

./: .clang-format  .gitignore  .gitmodules  .npmrc  CMakeLists.txt  README.md  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  public_input_base.json  public_input_scalar.json  requirements.txt
circuits/: CMakeLists.txt
circuits/account/: account_path.cpp  account_path.ll
circuits/params/: verifier_params_account.json  verifier_params_state_base.json  verifier_params_state_scalar.json
libs/algebra/: .clang-format  CMakeLists.txt  CODEOWNERS  LICENSE_1_0.txt  README.md  crypto3.algebra.podspec.json
libs/algebra/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/algebra/example/: CMakeLists.txt  curves.cpp  fields.cpp  multiexp.cpp  pairing.cpp  random_element.cpp
libs/algebra/include/nil/crypto3/algebra/: marshalling.hpp  random_element.hpp  type_traits.hpp  wnaf.hpp
libs/algebra/include/nil/crypto3/detail/: assert.hpp  inline_variable.hpp  literals.hpp  make_array.hpp  make_uint_t.hpp  octet.hpp  same_value.hpp  state_adder.hpp  stream_endian.hpp  type_traits.hpp  unbounded_shift.hpp
libs/algebra/test/: CMakeLists.txt  bilinearity.cpp  curves.cpp  curves_static.cpp  fields.cpp  fields_static.cpp  groups.cpp  hash_to_curve.cpp  matrix.cpp  multiexp.cpp  pairing.cpp  vector.cpp  wnaf.cpp
libs/algebra/test/data/: curves.json
libs/block/: .clang-format  .travis.yml  CMakeLists.txt  README.md  crypto3.block.podspec.json
libs/block/cmake/: PlatformConfiguration.cmake  TargetConfiguration.cmake  build.hpp.in
libs/block/cmake/modules/: .gitattributes
libs/block/docs/: concepts.md  extension.md  implementation.md  index.md  introduction.md  manual.md  usage.md
libs/block/include/nil/crypto3/block/: aes.hpp  basic_shacal.hpp  cipher.hpp  cipher_key.hpp  cipher_state.hpp  cipher_value.hpp  kasumi.hpp  md4.hpp  md5.hpp  rijndael.hpp  shacal.hpp  shacal1.hpp  shacal2.hpp
libs/block/include/nil/crypto3/detail/: endian_shift.hpp  make_array.hpp  octet.hpp  primes.hpp  unbounded_shift.hpp
libs/block/test/: CMakeLists.txt  kasumi.cpp  md4.cpp  md5.cpp  pack.cpp  rijndael.cpp  shacal.cpp  shacal2.cpp
libs/block/test/data/: rijndael.json
libs/codec/: .travis.yml  CMakeLists.txt  README.md  crypto3.codec.podspec.json
libs/codec/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/codec/include/nil/crypto3/codec/: base.hpp  codec_state.hpp  codec_value.hpp  hex.hpp
libs/codec/include/nil/crypto3/detail/: digest.hpp  exploder.hpp  reverser.hpp  (+2 more)
libs/codec/test/: CMakeLists.txt  base.cpp  hex.cpp  logic.cpp
libs/codec/test/data/: base.json  hex.json
libs/hash/: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  crypto3.hash.podspec.json
libs/hash/cmake/: CheckAVX.cmake  CheckSSE.cmake  PlatformConfiguration.cmake  TargetArchitecture.cmake
libs/hash/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md  pack.md  usage.md
libs/hash/test/: CMakeLists.txt  blake2b.cpp  h2c.cpp  keccak.cpp  md4.cpp  md5.cpp  pack.cpp  poseidon.cpp  ripemd.cpp  sha.cpp  sha1.cpp  sha2.cpp  sha3.cpp  static_digest.cpp  tiger.cpp  tmp_poseidon_constexpr_generation.cpp
libs/hash/test/data/: blake2b.json  keccak.json  md4.json  md5.json  poseidon.json  ripemd.json  sha.json  sha1.json  sha2.json  sha3.json  tiger.json
libs/mac/: .gitignore  CMakeLists.txt  README.md  crypto3.mac.podspec.json
libs/mac/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/mac/test/: CMakeLists.txt  cbc_mac.cpp  cmac.cpp  gmac.cpp  hmac.cpp  poly1305.cpp  siphash.cpp  x919_mac.cpp
libs/marshalling/algebra/: CMakeLists.txt  LICENSE  README.md
libs/marshalling/algebra/cmake/: GenWinAppStartBat.cmake  MarshallingConfig.cmake
libs/marshalling/algebra/test/: CMakeLists.txt  curve_element.cpp  curve_element_fixed_size_container.cpp  curve_element_non_fixed_size_container.cpp  field_element.cpp  field_element_non_fixed_size_container.cpp
libs/marshalling/core/: .clang-format  .travis.yml  CMakeLists.txt  README.md
libs/marshalling/core/docs/: as_pack.md  doxygen.conf  examples.md  layout.xml  main.dox  marshalling.dox  page_assert.dox  page_define_prot.dox  page_field.dox  page_prot_stack.dox  page_use_prot.dox
libs/marshalling/core/test/: CMakeLists.txt  pack.cpp  processing.cpp  types.cpp
libs/modes/: CMakeLists.txt  README.md
libs/modes/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/modes/test/: CMakeLists.txt  aead_ccm.cpp  aead_chacha20poly1305.cpp  aead_eax.cpp  aead_gcm.cpp  aead_ocb.cpp  aead_siv.cpp  cbc.cpp  cfb.cpp  ctr.cpp  cts.cpp  ecb.cpp  ofb.cpp  padding.cpp  xts.cpp
libs/pkmodes/: CMakeLists.txt  README.md  crypto3.threshold.podspec.json
libs/pkmodes/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/pkmodes/test/: CMakeLists.txt  threshold.cpp
libs/pkpad/: .gitignore  CMakeLists.txt  crypto3.pkpad.podspec.json
libs/pkpad/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/pkpad/test/: CMakeLists.txt  emsa1.cpp  mgf1.cpp
libs/pkpad/test/data/: emsa.json
libs/pubkey/: .gitignore  CMakeLists.txt
libs/pubkey/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md  usage.md
libs/pubkey/example/: CMakeLists.txt  bls.cpp
libs/pubkey/test/: CMakeLists.txt  bls.cpp  ecc_bp256.cpp  ecc_helper.hpp  ecc_p256.cpp  ecc_p384.cpp  ecc_p521.cpp  ecdsa.cpp  eddsa.cpp  fuzzers.hpp  os2ecp.cpp  pkcs8.cpp  secret_sharing.cpp
libs/random/: CMakeLists.txt
libs/random/example/: CMakeLists.txt  hash.cpp
libs/random/test/: CMakeLists.txt  algebraic_engine.cpp  chacha.cpp  hash.cpp  rfc6979.cpp
libs/stream/: .gitmodules  .travis.yml  CMakeLists.txt  README.md  crypto3.stream.podspec.json
libs/stream/cmake/: CheckSSE.cmake  TargetArchitecture.cmake
libs/stream/docs/: concepts.md  implementation.md  index.md  introduction.md  manual.md
libs/stream/test/: CMakeLists.txt  chacha.cpp  rc4.cpp  salsa20.cpp
(+1895 files in other folders)
